package br.unitins.tp1.ironforge.dto.cidade;

public record CidadeDTO(String nome, Long idEstado) {

}
