package br.unitins.tp1.ironforge.model;

import jakarta.persistence.Entity;

@Entity
public class Fabricante extends DefaultEntity {

    private String nome;

    private String cnpj;

    private String email;

    public String getNome() {
        return nome;
    }

    public void setNome(String nome) {
        this.nome = nome;
    }

    public String getCnpj() {
        return cnpj;
    }

    public void setCnpj(String cnpj) {
        this.cnpj = cnpj;
    }

    public String getEmail() {
        return email;
    }

    public void setEmail(String email) {
        this.email = email;
    }

}
