package br.unitins.tp1.ironforge.model.pagamento;

import java.time.LocalDate;

import jakarta.persistence.Entity;

@Entity
public class Cartao extends Pagamento {

    private String titular;

    private String numero;

    private String cvc;

    private LocalDate validade;

    private TipoCartao tipoCartao;

    public String getTitular() {
        return titular;
    }

    public void setTitular(String titular) {
        this.titular = titular;
    }

    public String getNumero() {
        return numero;
    }

    public void setNumero(String numero) {
        this.numero = numero;
    }

    public String getCvc() {
        return cvc;
    }

    public void setCvc(String cvc) {
        this.cvc = cvc;
    }

    public LocalDate getValidade() {
        return validade;
    }

    public void setValidade(LocalDate validade) {
        this.validade = validade;
    }

    public TipoCartao getTipoCartao() {
        return tipoCartao;
    }

    public void setTipoCartao(TipoCartao tipoCartao) {
        this.tipoCartao = tipoCartao;
    }

    
}
